swapped align-self for justify-self for .project-thumbnail, corrected responsiveness

--- a/src/components/DisplayArea/style.css
+++ b/src/components/DisplayArea/style.css
@@ -47,9 +47,7 @@
 }
 
 .project-thumbnail {
-  align-self: center;
-  width: 100%;
-  
+  justify-self: center;
   display: flex;
   justify-content: space-around;
 }
@@ -66,17 +64,20 @@
 
   .display-project {
     grid-template-columns: repeat(2, 1fr);
+    width: 100%;
   }
 
   .project-name {
     font-size: 2em;
     grid-column: 1 / 3;
+
   }
 
   .project-thumbnail {
     grid-column: 1 / 3;
-    height: 100%;
-  }
+    height: 360px;
+    width: 640px;
+}
 
   .project-description {
     grid-column: 1 / 3;
